# omg-seminar

./: CMakeLists.txt  README.md
include/: state-machine.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
